--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="letter">
                     <div class="text">
                         <strong>Querida Emily.</strong>
-                        <p> Te he hecho este pequeñito detalle para recordarte lo feliz y lo mucho que te amo, adoro
+                        <p> Te he hecho este pequeñito detalle para recordarte lo feliz que soy contigo y lo mucho que te amo, adoro
                             estar contigo y pasar tiempo juntos, es un poco breve pero lo hice con mucho amor para ti ,
                             por que me gusta recordarte lo importante que eres en mi vida,
                             Te Amo Mucho mi niña <3  
